# CardanoHack_Repo

./: .gitignore  README.md
backend/agents/compliance-agent/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/agents/compliance-agent/config/: compliance-rules.json
backend/agents/compliance-agent/src/: complianceAgent.ts
backend/agents/settlement-agent/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/agents/settlement-agent/src/: server.ts  settlementAgent.ts
backend/agents/tracking-agent/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
digital-twin-service/: .env.example  .gitignore  README.md  package-lock.json  package.json
digital-twin-service/src/: api.js
frontend-react/: .env.example  .gitignore  README.md  package-lock.json  package.json
frontend-react/public/: index.html
frontend-react/src/: App.css  App.js
frontend-react/src/components/: FreightDashboard.js  GradientDashboard.css  GradientDashboard.js  PremiumDashboard.js  SimplePremiumDashboard.js  WalletIntegration.js
frontend-react/src/hooks/: useWallet.js
frontend-react/src/services/: wallet.js
frontend-react/src/styles/: dashboard.css
iot-simulator/: .env.example  .gitignore  README.md  package-lock.json  package.json
iot-simulator/src/: iotSimulator.js
masumi-integration/payment-service/: .env.example  .gitignore  README.md  REAL_IMPLEMENTATION.md  package-lock.json  package.json
masumi-integration/payment-service/src/: server.js
onchain/hydra/: .gitignore  docker-compose.yml  hydra-client.js  instructions.md  package-lock.json  package.json
onchain/hydra/hydra-keys/: README.md
onchain/hydra/scripts/: start-hydra-nodes.sh  stop-hydra-nodes.sh
onchain/plutus/: .gitignore  README.md  ShipmentEscrow.hs  flake.nix  smart-freight-plutus.cabal
onchain/plutus/app/: WriteValidator.hs
onchain/plutus/test/: ShipmentEscrowSpec.hs  Spec.hs
(+2 files in other folders)
